# agentic-ts-forecasting-system

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE (MIT)  README.md  WELCOME.md  WIKI.md  agentic_ts_forecasting_system.py  app.py  ci_workflow.yaml  cli_runner.py  daily_sales.csv  forecast.csv  license  project_summary.md  pyproject.toml  requirements.txt  slide_notes.md  streamlit_app.py
agents/: data_generation_agent.py  data_scientist_agent.py  documentation_agent.py  orchestration_agent.py  peer_review_agent.py  presentation_agent.py  project_manager_agent.py  requirements_agent.py
docs/: index.md
tests/: test_agents.py
