[project]
name = "agentic-ts-forecasting"
version = "0.1.0"
description = "Agentic AI system for end-to-end time series forecasting using modular LLM agents"
authors = [
    { name = "Mrig", email = "your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "pandas==2.2.1",
    "numpy==1.26.4",
    "prophet==1.1.5",
    "matplotlib==3.8.4",
    "plotly==5.19.0",
    "openai==1.23.6",
    "flask==3.0.2",
    "streamlit==1.33.0",
    "fpdf==1.7.2",
    "python-docx==1.1.0",
    "tabulate==0.9.0"
]

[project.optional-dependencies]
dev = [
    "black==24.3.0",
    "flake8==7.0.0",
    "jupyter==1.0.0"
]

[tool.setuptools]
packages = ["agentic_ts_forecasting_system"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
